# agnes-makeathon-2026

./: .env.example  .gitignore  DEMO_GUIDE.md  README.md  config.py  preflight.py  pyproject.toml  requirements.txt  run_cloud_ingestion.py  validators.py
agents/: __init__.py  compliance.py  optimisation.py  substitution.py
api/: __init__.py  main.py
assets/: apify_scraped_evidence.txt  enrichment_evidence.txt
dify_setup/: README.md  __init__.py  pulp_solver_tool.py
enrichment/: __init__.py  pipeline.py
knowledge/: __init__.py  pipeline.py
migration/: migrate_bom.py
sql_dumb/: bom  bom_component  company  compliance_flags  enrichment_rejected  product  supplier  supplier_product
tests/: __init__.py  conftest.py  test_cognee_pipeline.py  test_compliance_agent.py  test_dify_tools.py  test_enrichment_agent.py  test_fastapi_search.py  test_kg_topology.py  test_migration_fidelity.py  test_migration_unit.py  test_optimisation_agent.py  test_project_structure.py  test_smoke.py  test_substitution_agent.py  test_validators.py
